--- a/styles/madsat.css
+++ b/styles/madsat.css
@@ -54,10 +54,28 @@ body,p li, h1{
 	
 }
 
+#status{
+	float:right;
+	width:31.28%;
+	height:30%;
+	border-radius: 4px;
+	border: solid #4297d7 1px;
+	background-color: #fcfdfd;
+	margin-bottom: 3px;
+	background-color: #fcfdfd;
+	padding-top:.5em;
+	padding-left:1em;
+	
+}
+.status{
+	display:block;
+	display:inline;
+}
+
 #graphicsDisplay{
 	float:right;
 	width:30%;
-	height: 100%;
+	height: 68%;
 	padding: .5em 1em;
 	border-radius: 4px;
 	border: solid #4297d7 1px;
