--- a/styles/madsat.css
+++ b/styles/madsat.css
@@ -38,14 +38,14 @@ body,p li, h1{
 	border: solid #4297d7 1px;
 	background-color: #fcfdfd;
 	overflow: auto;
-	/*margin-bottom:5px;*/
+	margin-bottom:5px;
 }
 /* Button section to click through results */
 #np-results{
 	
 	float: right;
 	display:inline;
-	width:100px;
+	width:auto;
 	height:auto;
 	border-radius: 4px;
 	border: solid #4297d7 1px;
@@ -75,7 +75,7 @@ body,p li, h1{
 #graphicsDisplay{
 	float:right;
 	width:30%;
-	height: 68%;
+	height: 68.16%;
 	padding: .5em 1em;
 	border-radius: 4px;
 	border: solid #4297d7 1px;
