--- a/styles/madsat.css
+++ b/styles/madsat.css
@@ -48,9 +48,10 @@ body,p li, h1{
 	width:auto;
 	height:auto;
 	border-radius: 4px;
-	border: solid #4297d7 1px;
+	/*border: solid #4297d7 1px;*/
 	background-color: #fcfdfd;
-	margin: 2px;
+	/*margin: 2px;
+	padding: 2px;*/
 	
 }
 
@@ -66,10 +67,14 @@ body,p li, h1{
 	padding-top:.5em;
 	padding-left:1em;
 	
+	
 }
 .status{
 	display:block;
 	display:inline;
+	line-height:1.25;
+	font-weight:700;
+	color:#4297d7; 
 }
 
 #graphicsDisplay{
