--- a/styles/madsat.css
+++ b/styles/madsat.css
@@ -43,7 +43,7 @@ body,p li, h1 div {
 }
 
 #query-results{
-	padding-top: 10px;
+	margin-top: 70px;
 }
 
 /* Button section to click through results */
@@ -56,8 +56,8 @@ body,p li, h1 div {
 	border-radius: 4px;
 	/*border: solid #4297d7 1px;*/
 	background-color: #fcfdfd;
-	/*margin: 2px;
-	padding: 2px;*/
+	margin-bottom:0px;
+	
 	
 }
 
